# ws-camerad

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build.yml
config/: ws-camerad.conf
debian/: changelog  clip_client.1  control  copyright  debhelper-build-stamp  frame_consumer.1  not-installed  python3-ws-camerad.install  rules  still_client.1  ws-camerad-dev.install  ws-camerad-examples.install  ws-camerad-examples.manpages  ws-camerad.8  ws-camerad.dirs  ws-camerad.install  ws-camerad.manpages  ws-camerad.postinst  ws-camerad.postrm  ws-camerad.service  ws-camerad.tmpfiles
examples/: bench_motion.cpp  bench_motion.py  clip_client.cpp  clip_client.py  frame_consumer.cpp  motion_clip.cpp  motion_clip.py  opencv_analysis.py  still_client.cpp  still_client.py  ws_camerad.py
include/camera_daemon/: audio_reader.hpp  camera_manager.hpp  capture_pipeline.hpp  clip_extractor.hpp  common.hpp  control_socket.hpp  daemon.hpp  frame_notifier.hpp  frame_rotator.hpp  logger.hpp  raw_ring_buffer.hpp  ring_buffer.hpp  rtsp_server.hpp  shared_memory.hpp  still_capture.hpp  v4l2_encoder.hpp  v4l2_jpeg.hpp  v4l2_loopback.hpp
include/ws_camerad/: client.hpp
python/: README.md  pyproject.toml
python/ws_camerad/: __init__.py
src/: main.cpp
src/audio/: audio_reader.cpp
src/buffer/: raw_ring_buffer.cpp  ring_buffer.cpp  shared_memory.cpp
src/camera/: camera_manager.cpp  capture_pipeline.cpp  frame_rotator.cpp
src/capture/: clip_extractor.cpp  still_capture.cpp
src/encoder/: v4l2_encoder.cpp  v4l2_jpeg.cpp
src/ipc/: control_socket.cpp  frame_notifier.cpp
src/streaming/: rtsp_server.cpp  v4l2_loopback.cpp
src/utils/: config.cpp
tests/: CMakeLists.txt  test_audio_reader.cpp  test_capture_structs.cpp  test_command.cpp  test_common.cpp  test_config.cpp  test_control_socket.cpp  test_daemon_integration.cpp  test_frame_rotator.cpp  test_full_integration.cpp  test_hardware.cpp  test_integration.cpp  test_logger.cpp  test_raw_ring_buffer.cpp  test_ring_buffer.cpp  test_shared_memory.cpp  test_v4l2_loopback.cpp
